// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render LikeUnlikeBlog component correctly if bid in blogsLiked 1`] = `
<DocumentFragment>
  <div>
    <a
      class="unlike-container"
      data-testid="like_unlike_blog"
      disabled=""
    >
      <abbr
        title="Unlike Blog"
      >
        <svg
          class="unlike-icon"
        >
          heart-solid.svg
        </svg>
      </abbr>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Should render LikeUnlikeBlog component correctly if bid not in blogsLiked 1`] = `
<DocumentFragment>
  <div>
    <a
      class="like-container"
      data-testid="like_unlike_blog"
      disabled=""
    >
      <abbr
        title="Like Blog"
      >
        <svg
          class="like-icon"
        >
          heart-regular.svg
        </svg>
      </abbr>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Should render LikeUnlikeBlog component correctly without uname 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
